stuck on refresh issue

--- a/src/components/PostView/PostView.module.scss
+++ b/src/components/PostView/PostView.module.scss
@@ -53,3 +53,10 @@
     margin-top: -.85em;
     margin-bottom: 0em;
 }
+
+.addCommentButton {
+    display: block;
+    margin-top: .5rem;
+    margin-left: auto;
+    margin-right: auto;
+}
